syntax = "proto3";
package com.qiding.direct;
message DeviceInfo{
    sint32 Major=1;
    sint32 Minor=2;
    sint32 rssi=3;
}

message UserPosition{
  string positionX=1;
  string positionY=2;
  string positionZ=3;
}


message DeviceInfoList{
  repeated DeviceInfo deviceInfo=1;
}

message UserPositionList{
  repeated UserPosition position=1;
}

message Direction{
    UserPosition startPosition=1;
    UserPosition endPosition=2;
}
