syntax = "proto3";
package com.qiding.direct;
import "UserPosition.proto";

service UserPositionService{
  rpc userPosition(DeviceInfoList) returns(UserPositionList){};
  rpc userDirection(Direction) returns(UserPositionList){};
  rpc startNameDisplay(UserPosition) returns(StartNameDisplay){};
}


